src/test/deca/context/invalid/decaObjet/method/19wrongArgsType.deca
// Description:
// Test d'un appel de méthode avec un argument du mauvais type
//
// Resultats:
//     19wrongArgsType.deca:16:8:
//
// Historique:
//    crée le 16/06/2022

class A {
    void m(float a) {println(a);}
}

{
    A a = new A();
    a.m(false);
}